@@ -1,6 +1,11 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+    No new features.
+
+    Dependency fixes:
+    * Removed references to Devel::Peek, Devel::Refcount and Devel::MAT
+    left over from earlier testing.
 
 0.001     2017-01-08 19:45:18+08:00 Asia/Kuala_Lumpur
-Initial CPAN release
+    Initial CPAN release
